# mic_programming_exercise

./: .gitignore  Opencv_exercise.sln  README.md  proxy_test.txt
Opencv_exercise/: Opencv_exercise.sln  Opencv_exercise.vcxproj  main.cpp
Opencv_exercise/Opencv_exercise/: Opencv_exercise.vcxproj  main.cpp
Opencv_exercise/Opencv_gaussian/: CMakeLists.txt  Opencv_gaussian.vcxproj  Opencv_gaussian.vcxproj.filters  gaussian.cpp
Opencv_exercise/Opencv_hue_invert/: Opencv_hue_invert.vcxproj  README.md  hue_invert.cpp
Opencv_exercise/Opencv_median/: Opencv_median.vcxproj  median.cpp
Opencv_exercise/Opencv_mosaic/: Opencv_mosaic.vcxproj  Opencv_mosaic.vcxproj.filters  mosaic.cpp
Opencv_exercise/Opencv_smooth/: Opencv_smooth.vcxproj  smooth.cpp
Opencv_exercise/Opencv_sobel/: Opencv_sobel.vcxproj  Opencv_sobel.vcxproj.filters  sobel.cpp
Opencv_exercise/canny_edge_detection/: canny_edge_detection.cpp  canny_edge_detection.vcxproj  canny_edge_detection.vcxproj.filters  filters.h  (+5 more)
Opencv_exercise/color_transfer/: CMakeLists.txt  MyVec3d.cpp  MyVec3d.h  README.md  color_transfer.vcxproj  color_transfer.vcxproj.filters  main.cpp
Opencv_exercise/template_matching/: CMakeLists.txt  README.md  main.cpp  template_matching.vcxproj
Opencv_gaussian/: Opencv_gaussian.vcxproj  gaussian.cpp
Opencv_hue_invert/: Opencv_hue_invert.vcxproj  Opencv_hue_invert.vcxproj.filters  README.md  hue_invert.cpp
Opencv_median/: Opencv_median.vcxproj  Opencv_median.vcxproj.filters  median.cpp
Opencv_mosaic/: Opencv_mosaic.vcxproj  README.md  mosaic.cpp
Opencv_smooth/: Opencv_smooth.vcxproj  Opencv_smooth.vcxproj.filters  smooth.cpp
Opencv_sobel/: Opencv_sobel.vcxproj  README.md  main.cpp  sobel.cpp
Opencv_template/: Opencv_template.sln
class_exercise/: class_exercise.sln
images/: readme.txt
(+8 files in other folders)
